# python-library-template

./: cookiecutter.json
{{ cookiecutter.repo_slug }}/: CONTRIBUTING.md  README.md  main.py  pyproject.toml
{{ cookiecutter.repo_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.repo_slug }}/tests/: test_{{ cookiecutter.repo_slug }}.py
{{ cookiecutter.repo_slug }}/{{ cookiecutter.repo_slug }}/: LICENSE.md
